@@ -363,7 +363,7 @@
           <property name="maximumSize">
            <size>
             <width>16777215</width>
-            <height>100</height>
+            <height>150</height>
            </size>
           </property>
           <property name="title">
@@ -376,7 +376,7 @@
            <property name="geometry">
             <rect>
              <x>0</x>
-             <y>30</y>
+             <y>40</y>
              <width>135</width>
              <height>22</height>
             </rect>
@@ -395,7 +395,7 @@
            <property name="geometry">
             <rect>
              <x>0</x>
-             <y>70</y>
+             <y>90</y>
              <width>151</width>
              <height>27</height>
             </rect>
@@ -411,13 +411,29 @@
            <property name="geometry">
             <rect>
              <x>0</x>
-             <y>50</y>
+             <y>60</y>
              <width>131</width>
              <height>22</height>
             </rect>
            </property>
            <property name="text">
             <string>Show Unfitted</string>
+           </property>
+          </widget>
+          <widget class="QCheckBox" name="show_labels">
+           <property name="geometry">
+            <rect>
+             <x>0</x>
+             <y>20</y>
+             <width>141</width>
+             <height>21</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Show probes labels</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
            </property>
           </widget>
          </widget>
