@@ -6,6 +6,7 @@ Release 0.8.5
 * refactoring of the meta merging GUI, addition of bhatta distances
 * meta merging more robust for non stationary recordings
 * enhance logging if parameters are missing and/or not defined
+* can now display the electrode labels in preview GUI
 
 =============
 Release 0.8.4
